Configurando media queries para varias telas

--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="estilos/style.css">
+    <link rel="stylesheet" href="estilos/media-queries.css">
     <title>Login</title>
 </head>
 <body>
     <main>
         <section id="login">
             <div id="img">
-
+                
             </div>
 
             <div id="form">
@@ -19,7 +20,8 @@
                 <p>Seja bem-vindo(a) novamente. Faça seu login para acessar sua conta.</p>
                 
                 <form action="login.php" method="post">
-
+                    <label for="iteste">Teste</label>
+                    <input type="text" name="teste" id="iteste">
                 </form>
             </div>
         </section>
