--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="estilos/style.css">
     <link rel="stylesheet" href="estilos/media-queries.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <title>Login</title>
 </head>
 <body>
@@ -19,9 +20,21 @@
                 <h1>Login</h1>
                 <p>Seja bem-vindo(a) novamente. Faça seu login para acessar sua conta.</p>
                 
-                <form action="login.php" method="post">
-                    <label for="iteste">Teste</label>
-                    <input type="text" name="teste" id="iteste">
+                <form action="login.php" method="post" autocomplete="on">
+                    <div class="campo">
+                        <span class="material-symbols-outlined">person</span>
+                        <input type="email" name="email" id="iemail" required placeholder="Seu e-mail" maxlength="30" autocomplete="email">
+                        <label for="iemail">Login</label>
+                    </div>
+
+                    <div class="campo">
+                        <span class="material-symbols-outlined">lock</span>
+                        <input type="password" name="senha" id="isenha" required placeholder="Sua senha" minlength="8" maxlength="15">
+                        <label for="isenha">Senha</label>
+                    </div>
+
+                    <input type="submit" value="ENTRAR">
+                    <a href="#">Esqueci a senha</a>
                 </form>
             </div>
         </section>
