--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     </div>
 
                     <input type="submit" value="ENTRAR">
-                    <a href="#">Esqueci a senha</a>
+                    <a href="#">REDEFINIR SENHA</a>
                 </form>
             </div>
         </section>
